<resources>
    <string name="app_name">BookNow</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_authentication_code">Send authentication code</string>>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="title_activity_test_dashboard">testDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user">%1$s</string>
    <string name="editworkinghours">edit working hours</string>
    <string name="editservice">edit service</string>
    <string name="editserviceprovider">edit service provider</string>
    <string name="changespecificdatehours">change specific date hour\'s</string>
    <string name="logout">log out</string>
    <string name="copyright">copyright</string>
    <string name="profile">profile<b>

    </b></string>
    <string name="title_activity_special_offer">special_offer</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>

    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="managespecialoffers">manage special offers</string>
</resources>